# aoc-bot

./: .gitignore  README.md  pyproject.toml
aoc_bot/: __main__.py
aoc_bot/modules/: leaderboard.py  link_command.py
notifier/: README.md
